# let-me-sync

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 59467ea1b81e_extract_roles_table.py  a3f8e2b1c4d5_refactor_data_files_table.py
server/: __main__.py  main.py  middleware.py
server/cli/: refresh.py  seed.py
server/config/: __init__.py
server/database/: connection.py
server/models/: __init__.py
server/routes/: admin.py  auth.py  files.py  sync.py
server/schemas/: __init__.py
server/static/: style.css
server/templates/: api_keys.html  base.html  data_types.html  files.html  index.html  login.html  stations.html  users.html
server/utils/: helpers.py
